# Iterative-Outlier-Censoring-Wrapper

./: LICENSE  pyproject.toml
iocw/: __init__.py  iocw.py
tests/: test_iocw.py
