[project]
name = "Iterative-Outlier-Censoring-Wrapper"
version = "0.1.0"
description = "Wrapps a sklern regressor and iteratively censors any outlier, thus increasing the robustness of the model."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
]
